# libksieve

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  KF5LibKSieveConfig.cmake.in  KPimLibKSieveConfig.cmake.in  REUSE.toml  TODO  libksieve.categories  libksieve.renamecategories  metainfo.yaml
kioslave/src/sieve/: CMakeLists.txt  Messages.sh  sieve.cpp  sieve.h  sieve.json  sieve.protocol
src/: CMakeLists.txt  Messages.sh  config-libksieve.h.cmake  config-libksieve.h.in
src/impl/: lexer.h  parser.h  utf8validator.h
src/kmanagesieve/: CMakeLists.txt  KPimKManageSieveConfig.cmake.in  KPimLibKManageSieveConfig.cmake.in  KPimLibKManagerSieveConfig.cmake.in  response.cpp  response.h  sasl-common.h  session.cpp  session.h  sessionthread.cpp  sessionthread_p.h  sievejob.cpp  sievejob.h  sievejob_p.h
src/ksieve/: CMakeLists.txt  KPimKSieveConfig.cmake.in  error.h  lexer.cpp  lexer.h  lexer_p.h  parser.cpp  parser.h  parser_p.h  scriptbuilder.h  utf8validator.cpp
src/ksievecore/: CMakeLists.txt  KPimKSieveCoreConfig.cmake.in  KPimLibKSieveCoreConfig.cmake.in  ksieve-index.qdoc  ksievecore.qdoc  ksievecore.qdocconf  ksievecore_private_export.h
src/ksievecore/managescriptsjob/: checkkolabkep14supportjob.cpp  checkkolabkep14supportjob.h  checkscriptjob.cpp  checkscriptjob.h  generateglobalscriptjob.cpp  generateglobalscriptjob.h  parseuserscriptjob.cpp  parseuserscriptjob.h  renamescriptjob.cpp  renamescriptjob.h
src/ksievecore/scriptsparsing/: parsingutil.cpp  parsingutil.h  xmlprintingscriptbuilder.cpp  xmlprintingscriptbuilder.h
src/ksievecore/settings/: sieve-vacation.kcfgc
src/ksievecore/sieveimapinstance/: sieveimapinstance.cpp  sieveimapinstance.h  sieveimapinstanceinterface.cpp  sieveimapinstanceinterface.h  sieveimapinstanceinterfacemanager.cpp  sieveimapinstanceinterfacemanager.h
src/ksievecore/util/: abstractakonadiimapsettinginterface.cpp  abstractakonadiimapsettinginterface.h  akonadiimapsettinginterface.cpp  akonadiimapsettinginterface.h  findaccountinfojob.cpp  findaccountinfojob.h  sieveimapaccountsettings.cpp  sieveimapaccountsettings.h  sieveimappasswordprovider.cpp  sieveimappasswordprovider.h  util.cpp  util.h  util_p.h
src/ksievecore/vacation/: multiimapvacationmanager.cpp  multiimapvacationmanager.h  searchserverwithvacationsupportjob.cpp  searchserverwithvacationsupportjob.h  vacationcheckjob.cpp  vacationcheckjob.h  vacationcreatescriptjob.cpp  vacationcreatescriptjob.h  vacationhelperjob.cpp  vacationhelperjob.h  vacationscriptextractor.cpp  vacationscriptextractor.h  vacationutils.cpp  vacationutils.h
src/ksieveui/: CMakeLists.txt  KPimKSieveUiConfig.cmake.in  KPimLibKSieveUiConfig.cmake.in  config-libksieveui.h.in  ksieveui.qdoc  ksieveui.qdocconf  ksieveui_private_export.h  managesievescriptsdialog.cpp  managesievescriptsdialog.h  sievenetworkmanager.cpp  sievenetworkmanager.h
src/ksieveui/autocreatescripts/: autocreatescriptdialog.cpp  autocreatescriptdialog.h  autocreatescriptutil.cpp  autocreatescriptutil_p.h  sieveactionwidgetlister.cpp  sieveactionwidgetlister.h  sieveconditionwidgetlister.cpp  sieveconditionwidgetlister.h  sieveeditorgraphicalmodewidget.cpp  sieveeditorgraphicalmodewidget.h  sieveeditorgraphicalmodewidgetabstract.cpp  sieveeditorgraphicalmodewidgetabstract.h  sieveforeverypartwidget.cpp  sieveforeverypartwidget.h  sieveglobalvariablewidget.cpp  sieveglobalvariablewidget.h  sieveincludewidget.cpp  sieveincludewidget.h  sievepreviewgeneratedcodewidget.cpp  sievepreviewgeneratedcodewidget.h  sievescriptblockwidget.cpp  sievescriptblockwidget.h  sievescriptdescriptiondialog.cpp  sievescriptdescriptiondialog.h  sievescriptlistbox.cpp  sievescriptlistbox.h  sievescriptpage.cpp  sievescriptpage.h  sievescriptparsingerrordialog.cpp  sievescriptparsingerrordialog.h  sievescripttabwidget.cpp  sievescripttabwidget.h  sievewidgetpageabstract.cpp  sievewidgetpageabstract.h
src/ksieveui/data/: ksieve_script.knsrc
src/ksieveui/debug/: sievedebugdialog.cpp  sievedebugdialog.h
src/ksieveui/editor/: sieveeditor.cpp  sieveeditor.h  sieveeditorabstractwidget.cpp  sieveeditorabstractwidget.h  sieveeditorhelphtmlwidget.cpp  sieveeditorhelphtmlwidget.h  sieveeditorloadprogressindicator.cpp  sieveeditorloadprogressindicator.h  sieveeditormenubar.cpp  sieveeditormenubar.h  sieveeditortabwidget.cpp  sieveeditortabwidget.h  sieveeditortextmodewidget.cpp  sieveeditortextmodewidget.h  sieveeditorutil.cpp  sieveeditorutil.h  sieveeditorwebengineview.cpp  sieveeditorwebengineview.h  sieveeditorwebview.cpp  sieveeditorwebview.h  sieveeditorwidget.cpp  sieveeditorwidget.h  sieveinfodialog.cpp  sieveinfodialog.h  sieveinfowidget.cpp  sieveinfowidget.h  sievelinenumberarea.cpp  sievelinenumberarea.h  sievepurposemenuwidget.cpp  sievepurposemenuwidget.h  sievesyntaxspellcheckinghighlighter.cpp  sievesyntaxspellcheckinghighlighter.h  sievetextedit.cpp  sievetextedit.h  sievetexteditorspellcheckdecorator.cpp  sievetexteditorspellcheckdecorator.h  sievetexteditwidget.cpp  sievetexteditwidget.h
src/ksieveui/managescriptsjob/: checkkolabkep14supportjob.cpp  checkkolabkep14supportjob.h  checkscriptjob.cpp  checkscriptjob.h  generateglobalscriptjob.cpp  generateglobalscriptjob.h  parseuserscriptjob.cpp  parseuserscriptjob.h  renamescriptjob.cpp  renamescriptjob.h
src/ksieveui/scriptsparsing/: parsingresultdialog.cpp  parsingresultdialog.h  parsingutil.cpp  parsingutil.h  xmlprintingscriptbuilder.cpp  xmlprintingscriptbuilder.h  xmlprintingsyntaxhighlighter.cpp  xmlprintingsyntaxhighlighter.h
src/ksieveui/settings/: sieve-editor.kcfg  sieve-editor.kcfg.cmake  sieve-editor.kcfgc  sieve-vacation.kcfg  sieve-vacation.kcfgc
src/ksieveui/sieveimapinstance/: sieveimapinstance.cpp  sieveimapinstance.h  sieveimapinstanceinterface.cpp  sieveimapinstanceinterface.h  sieveimapinstanceinterfacemanager.cpp  sieveimapinstanceinterfacemanager.h
src/ksieveui/templates/: sievedefaulttemplate.cpp  (+5 more)
src/parser/: lexer.cpp  parser.cpp  utf8validator.cpp  utf8validator.h
src/shared/: error.cpp
(+786 files in other folders)
